Adding custom stack stylesheets

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf8" />
 <title>Danny</title>
 <link rel="stylesheet" href="bc.css" />
+<link rel="stylesheet" href="stack.css" />
 </head>
 <body>
 <main></main>
